# lib/db/api.js
@@ -1661,4 +1661,42 @@ dbapi.loadAccessToken = function(id) {
   return db.run(r.table('accessTokens').get(id))
 }
 
+dbapi.getVirtualDevices = function() {
+  return db.run(r.table('virtual_devices'))
+    .then(function(cursor) {
+      return cursor.toArray()
+    })
+}
+
+dbapi.getVirtualDevice = function(id) {
+  return db.run(r.table('virtual_devices').get(id))
+}
+
+dbapi.createVirtualDevice = function(data) {
+  const id = util.format('%s', uuid.v4()).replace(/-/g, '')
+  const now = r.now()
+
+  return db.run(r.table('virtual_devices').insert(Object.assign({}, data, {
+    id: id
+  , createdAt: now
+  , updatedAt: now
+  })))
+    .then(function() {
+      return dbapi.getVirtualDevice(id)
+    })
+}
+
+dbapi.updateVirtualDevice = function(id, data) {
+  return db.run(r.table('virtual_devices').get(id).update(
+    Object.assign({}, data, {updatedAt: r.now()})
+  ))
+  .then(function() {
+    return dbapi.getVirtualDevice(id)
+  })
+}
+
+dbapi.deleteVirtualDevice = function(id) {
+  return db.run(r.table('virtual_devices').get(id).delete())
+}
+
 module.exports = dbapi
